--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "publish": "semantic-release --no-ci",
     "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "start": "npm run build && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,16 +26,21 @@
   "homepage": "https://github.com/3ZsForInsomnia/flagger#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.7.12",
     "ramda": "^0.26.1",
-    "typescript": "^3.7.2"
+    "redis": "^2.8.0",
+    "typescript": "^3.7.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.6",
     "@semantic-release/git": "^7.0.18",
     "@semantic-release/github": "^5.5.5",
     "@semantic-release/npm": "^5.3.4",
+    "@types/express": "^4.17.2",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
+    "@types/ramda": "^0.26.36",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "commitizen": "^4.0.3",
