--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flagger",
+  "name": "@3zs/flagger",
   "version": "1.1.0",
   "description": "Simple feature flags server",
   "main": "index.ts",
