--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "publish": "semantic-release --no-ci",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
-    "start": "npm run build && node dist/index.js"
+    "server": "npm run build && node ./dist/index.js",
+    "start": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
   "homepage": "https://github.com/3ZsForInsomnia/flagger#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "http-status-codes": "^1.4.0",
+    "mongodb": "^3.3.5",
     "mongoose": "^5.7.12",
     "ramda": "^0.26.1",
     "redis": "^2.8.0",
@@ -39,6 +42,7 @@
     "@semantic-release/npm": "^5.3.4",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.23",
+    "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.14",
     "@types/ramda": "^0.26.36",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
