--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/3ZsForInsomnia/flagger#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-winston": "^4.0.1",
     "http-status-codes": "^1.4.0",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.12",
@@ -45,6 +46,7 @@
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.14",
     "@types/ramda": "^0.26.36",
+    "@types/redis": "^2.8.14",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "commitizen": "^4.0.3",
@@ -58,6 +60,7 @@
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
+    "nodemon": "^2.0.1",
     "prettier": "^1.19.1",
     "semantic-release": "^15.13.31",
     "ts-jest": "^24.2.0"
